@@ -1,3 +1,7 @@
+2000-12-14   Daiki Ueno  <ueno@unixuser.org>
+
+	* alist.el (del-alist): Simplified.
+
 2000-12-14  Mikio Nakajima  <minakaji@osaka.email.ne.jp>
 
 	* pym.el (static-if): Put t on edebug spec instead of if.
